--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,18 @@
 .App {
   text-align: center;
 }
-.textStyle{
+.noActive{
   border: 1px solid black;
+  background-color: white;
   border-radius: 2%/50%;
   height: 3rem;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+.active{
+  border: 2px solid rgb(216, 10, 10);
+  color: red;
+  background-color: rgb(223, 134, 134);
+}
+
