Feat: add welcome/landing page , component , and clean comments

--- a/src/App.css
+++ b/src/App.css
@@ -21,4 +21,10 @@
   justify-content: center;
   align-items: center;
 }
+.welcomeScreen{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
